name:                AdventOfCode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/justanotherdot/advent-linguist#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           2016 (c) Ryan James Spencer
category:            Puzzles
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
                     , Day07
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , cryptonite
                     , bytestring
                     , bytestring-show
                     , monad-par
                     , regex-tdfa
                     , regex-pcre
                     , array
                     , vector
  ghc-options:         -Wall -Werror -fwarn-tabs
  default-language:    Haskell2010

executable aoc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -eventlog -with-rtsopts=-N2
  ghc-options:         -Wall -Werror -fwarn-tabs
  ghc-options:         -fprof-auto
  build-depends:       base
                     , AdventOfCode
  default-language:    Haskell2010

test-suite aoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AdventOfCode
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -Werror -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/advent-linguist
